# LibTracer

./: .gitignore  README.md  build.sh  makefile  memory_IO_lib.c  run.sh  task
LD_PRELOAD_TEST/: CMakeLists.txt  inject.c  lib.c  lib.h  main.c  readme.md
LibTracer/: build.sh  injectLib.c  log.txt  logdemon  logdemon.c  memlib.c  run.sh  test.c
LibTracer/scripts/: build.sh  start.sh  test.sh
MUTEX_AND_SHM/: CMakeLists.txt  build.sh  increment.c  reset  reset.c
data/: task
src/: injectLib.c  logdemon.c
